--- a/aboutprof.html
+++ b/aboutprof.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="respon.css">
    
     <!-- LOGO title baR -->
-     <link rel="icon" href ="2.png"
+     <link rel="icon" href ="assets/2.png"
         type="image/x-icon">
     <title>AKADEMI JUARA</title>
   </head>
@@ -31,7 +31,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100 top-0">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
+            <img src="assets/2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
             Akademi Juara
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -99,21 +99,21 @@
     <div class="horizontal-scroll justify-center mb-5">
     <div class="team-card perkenalan" >
         <div class="badge-card">Founder & coo</div>
-        <img src="2.png" alt="Foto Tim 1" >
+        <img src="assets/2.png" alt="Foto Tim 1" >
         <h5 class="name" >Meylisa Hadi Yanti</h5>
         <p class="role">COO & Founder</p>
         <p class="desc">Mengembangkan strategi dan visi Akademi Juara.</p>
     </div>
     <div class="team-card perkenalan" href="https://rafi.gaenitraining.org/">
         <div class="badge-card">Founder & COO</div>
-        <img src="2.png" alt="Foto Tim 1">
+        <img src="assets/2.png" alt="Foto Tim 1">
         <h5 class="name">Rafi Pramana Putra</h5>
         <p class="role">COO & Founder</p>
         <p class="desc">Mengembangkan strategi dan visi Akademi Juara.</p>
     </div>
     <div class="team-card perkenalan">
         <div class="badge-card">Founder</div>
-        <img src="2.png" alt="Foto Tim 1">
+        <img src="assets/2.png" alt="Foto Tim 1">
         <h5 class="name">Ahnaf Aly</h5>
         <p class="role">CEO & Founder</p>
         <p class="desc">Mengembangkan strategi dan visi Akademi Juara.</p>
@@ -127,7 +127,7 @@
     <div class="horizontal-scroll mb-5">
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 2">
+            <img src="assets/2.png" alt="Foto Tim 2">
             <h5 class="name">Devi Kusuma</h5>
             <p class="role">Manajemen Operasional</p>
             <p class="desc">Mengelola keuangan dan logistik kelas.</p>
@@ -135,63 +135,63 @@
 
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
-            <img src="2.png" alt="Foto Tim 3">
+            <img src="assets/2.png" alt="Foto Tim 3">
             <h5 class="name">Raihan Nur</h5>
             <p class="role">IT & Website</p>
             <p class="desc">Developer untuk sistem kelas & backend.</p>
@@ -203,7 +203,7 @@
     <div class="horizontal-scroll mb-3">
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
-            <img src="2.png" alt="Foto Tim 4">
+            <img src="assets/2.png" alt="Foto Tim 4">
             <h5 class="name">Anisa Putri</h5>
             <p class="role">Mentor Bahasa Inggris</p>
             <p class="desc">Spesialis TOEFL Speaking & Writing.</p>
@@ -211,28 +211,28 @@
 
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
-            <img src="2.png" alt="Foto Tim 5">
+            <img src="assets/2.png" alt="Foto Tim 5">
             <h5 class="name">Budi Ramadhan</h5>
             <p class="role">Mentor UTBK</p>
             <p class="desc">Ahli TPS dan literasi numerasi.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
-            <img src="2.png" alt="Foto Tim 5">
+            <img src="assets/2.png" alt="Foto Tim 5">
             <h5 class="name">Budi Ramadhan</h5>
             <p class="role">Mentor UTBK</p>
             <p class="desc">Ahli TPS dan literasi numerasi.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
-            <img src="2.png" alt="Foto Tim 5">
+            <img src="assets/2.png" alt="Foto Tim 5">
             <h5 class="name">Budi Ramadhan</h5>
             <p class="role">Mentor UTBK</p>
             <p class="desc">Ahli TPS dan literasi numerasi.</p>
         </div>
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
-            <img src="2.png" alt="Foto Tim 5">
+            <img src="assets/2.png" alt="Foto Tim 5">
             <h5 class="name">Budi Ramadhan</h5>
             <p class="role">Mentor UTBK</p>
             <p class="desc">Ahli TPS dan literasi numerasi.</p>
@@ -259,54 +259,58 @@
 
 
  <!-- footer -->
-  <footer class="footer text-white py-4">
+  <footer class="footer text-white py-4" style="background-color: #045260;">
     <div class="container">
-        <div class="row align-items-start">
-        
+        <div class="row">
+
         <!-- Kolom Kiri -->
-        <div class="col-md-4 text-start style padd">
-            <img src="2.png" alt="Logo" width="50" class="mb-2">
-            <p class="mb-0">&copy; 2025 Akademi Juara. All Rights Reserved.</p>
+        <div class="col-md-4 mb-4 mb-md-0 text-start">
+            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
+            <p class="mb-0 fw-bold">AKADEMI JUARA</p>
         </div>
 
         <!-- Kolom Tengah -->
-        <div class="col-md-4 text-center">
-            <p class="mb-1">"One child, One teacher, One pen can change the world"</p>
-            <p>"Malala Yousafzai"</p>
+        <div class="col-md-4 mb-4 mb-md-0 text-center">
+            <p class="mb-1 fst-italic">"One child, One teacher, One pen can change the world"</p>
+            <p class="fst-italic">- Malala Yousafzai</p>
         </div>
 
         <!-- Kolom Kanan -->
         <div class="col-md-4 text-center">
-            <p class="ft">HUBUNGI KAMI</p>
+            <p class="fw-bold">HUBUNGI KAMI</p>
 
-            <div class="sosmed-item">
-                <a href="https://www.instagram.com/akademi.juara/" target="_blank" class="d-flex align-items-center text-decoration-none text-light">
-                    <img src="ig.png" alt="Instagram">
-                    <p>@akademi.juara</p>
-                </a>
+            <div class="sosmed-item mb-2">
+            <a href="https://www.instagram.com/akademi.juara/" target="_blank"
+                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                <img src="assets/ig.png" alt="Instagram" width="20">
+                <span>@akademi.juara</span>
+            </a>
+            </div>
+
+            <div class="sosmed-item mb-2">
+            <a href="https://www.youtube.com/@AkademiJuara" target="_blank"
+                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                <img src="assets/yt.png" alt="YouTube" width="20">
+                <span>Akademi Juara</span>
+            </a>
             </div>
 
             <div class="sosmed-item">
-                <a href="https://www.youtube.com/@AkademiJuara" target="_blank" class="d-flex align-items-center text-decoration-none text-light">
-                    <img src="yt.png" alt="YouTube">
-                    <p>Akademi Juara</p>
-                </a>
-            </div>
-
-            <div class="sosmed-item">
-                <a href="https://www.linkedin.com/company/akademijuara/?originalSubdomain=id" target="_blank" class="d-flex align-items-center text-decoration-none text-light">
-                    <img src="in.png" alt="LinkedIn">
-                    <p>Akademi Juara</p>
-                </a>
+            <a href="https://www.linkedin.com/company/akademijuara/?originalSubdomain=id" target="_blank"
+                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                <img src="assets/in.png" alt="LinkedIn" width="20">
+                <span>Akademi Juara</span>
+            </a>
             </div>
         </div>
-    </div>
+
+        </div>
 
         <!-- Bawah Footer -->
-        <!-- <div class="text-start pt-3">
-        <p class="mb-0">&copy; 2025 Akademi Juara. All Rights Reserved.</p>
+        <div class="text-center pt-3 mt-4 border-top border-light">
+        <p class="mb-0 small">&copy; 2025 Akademi Juara. All Rights Reserved.</p>
         </div>
-    </div> -->
+    </div>
 </footer>
 
 <script src="js/rspn.js"></script>
