--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="respon.css">
    
     <!-- LOGO title baR -->
-     <link rel="icon" href ="2.png"
+     <link rel="icon" href ="assets/2.png"
         type="image/x-icon">
     <title>AKADEMI JUARA</title>
   </head>
@@ -31,7 +31,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100 top-0">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
+            <img src="assets/2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
             Akademi Juara
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -78,13 +78,13 @@
             <!-- Gambar -->
             <div class="carousel-inner rounded overflow-hidden">
                 <div class="carousel-item active">
-                <img src="PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
+                <img src="assets/PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img src="PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
+                <img src="assets/PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
                 </div>
                 <div class="carousel-item">
-                <img src="PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
+                <img src="assets/PANJANG BIRU.png" class="d-block w-100 img-fluid" alt="...">
                 </div>
             </div>
 
@@ -151,21 +151,21 @@
          <div class="row justify-content-center g-4">
 
         <div class="col-md-3 program-aj   ">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
             </div>
             <div class="stat-label" style="font-size: 16px; font-weight: 600;">Online classes</div>
         </div>
 
         <div class="col-md-3 program-aj ">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
             </div>
             <div class="stat-label" style="font-size: 16px; font-weight: 600;">Scholarship & Competition Info</div>
         </div>
 
         <div class="col-md-3 program-aj ">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
         </div>
             <div class="stat-label" style="font-size: 16px; font-weight: 600;">international Exposure</div>
@@ -194,7 +194,7 @@
         <div class="row justify-content-center g-4">
 
         <div class="quality col-md-3 col-sm-6">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
             <div class="stat-value">150+</div>
             </div>
@@ -202,7 +202,7 @@
         </div>
 
         <div class="quality col-md-3 col-sm-6">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
             <div class="stat-value">🤝</div>
             </div>
@@ -210,7 +210,7 @@
         </div>
 
         <div class="quality col-md-3 col-sm-6">
-            <div class="stat-card" style="background-image: url('1.png');">
+            <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
             <div class="stat-value">10+</div>
             </div>
@@ -232,7 +232,7 @@
 
         <!-- Kolom Kiri -->
         <div class="col-md-4 mb-4 mb-md-0 text-start">
-            <img src="2.png" alt="Logo" width="50" class="mb-2">
+            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
             <p class="mb-0 fw-bold">AKADEMI JUARA</p>
         </div>
 
@@ -249,7 +249,7 @@
             <div class="sosmed-item mb-2">
             <a href="https://www.instagram.com/akademi.juara/" target="_blank"
                 class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="ig.png" alt="Instagram" width="20">
+                <img src="assets/ig.png" alt="Instagram" width="20">
                 <span>@akademi.juara</span>
             </a>
             </div>
@@ -257,7 +257,7 @@
             <div class="sosmed-item mb-2">
             <a href="https://www.youtube.com/@AkademiJuara" target="_blank"
                 class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="yt.png" alt="YouTube" width="20">
+                <img src="assets/yt.png" alt="YouTube" width="20">
                 <span>Akademi Juara</span>
             </a>
             </div>
@@ -265,7 +265,7 @@
             <div class="sosmed-item">
             <a href="https://www.linkedin.com/company/akademijuara/?originalSubdomain=id" target="_blank"
                 class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="in.png" alt="LinkedIn" width="20">
+                <img src="assets/in.png" alt="LinkedIn" width="20">
                 <span>Akademi Juara</span>
             </a>
             </div>
