--- a/com.html
+++ b/com.html
@@ -28,34 +28,69 @@
 
   <body>
     <!-- navbar -->
+    <!-- navbar -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100 top-0">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-fixed w-100 top-0 navbar-desktop d-none d-lg-block">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="assets/2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
-            Akademi Juara
+        <img src="assets/2.png" alt="" width="33" height="33" class="d-inline-block align-text-top me-3">
+        Akademi Juara
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item mx-2">
-                    <a class="nav-link" aria-current="page" href="main.html">Home</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link" href="aboutprof.html">About US</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link active" href="com.html">Community</a>
-                </li>
-                </li>
-            </ul>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item mx-2">
+            <a class="nav-link " href="main.html">Home</a>
+            </li>
+            <li class="nav-item mx-2">
+            <a class="nav-link" href="aboutprof.html">About Us</a>
+            </li>
+            <li class="nav-item mx-2">
+            <a class="nav-link active" href="com.html">Community</a>
+            </li>
+        </ul>
         </div>
     </div>
 </nav>
+
+<div class="d-lg-none">
+    <nav class="navbar navbar-dark bg-transparent position-fixed w-100 top-0 d-flex align-items-center navbar-mobile">
+        <div class="container-fluid d-flex justify-content-start align-items-center px-3">
+        <button class="navbar-toggler me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMobile"
+            aria-controls="offcanvasMobile">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand fw-bold text-white d-flex align-items-center" href="#">
+            <img src="assets/2.png" alt="logo" width="30" class="me-2">
+            AKADEMI JUARA
+        </a>
+        </div>
+    </nav>
+  <!-- Offcanvas Menu -->
+    <div class="offcanvas offcanvas-start bg-dark text-white" tabindex="-1" id="offcanvasMobile"
+    aria-labelledby="offcanvasMobileLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasMobileLabel">Menu</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link text-white" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-white" href="aboutprof.html">About Us</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-white" href="com.html">Community</a>
+            </li>
+        </ul>
+        </div>
+    </div>
+</div>
 
 
     <!-- hero section -->
@@ -75,7 +110,7 @@
         <div class="row align-items-center">
             <!-- Logo -->
             <div class="col-md-5 text-center mb-4 mb-md-0">
-                <img src="1.png" alt="Logo AJ" class="img-fluid aj-logo">
+                <img src="assets/1.png" alt="Logo AJ" class="img-fluid aj-logo">
             </div>
 
         <!-- Text -->
@@ -176,7 +211,7 @@
 
         <!-- Kolom Kiri -->
         <div class="col-md-4 mb-4 mb-md-0 text-start">
-            <img src="assets/assets/2.png" alt="Logo" width="50" class="mb-2">
+            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
             <p class="mb-0 fw-bold">AKADEMI JUARA</p>
         </div>
 
@@ -190,7 +225,7 @@
         <div class="col-md-4 text-center">
             <p class="fw-bold">HUBUNGI KAMI</p>
 
-            <div class="sosmed-item mb-2">
+            <div class="sosmed-item ig mb-2">
             <a href="https://www.instagram.com/akademi.juara/" target="_blank"
                 class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
                 <img src="assets/ig.png" alt="Instagram" width="20">
