--- a/index.html
+++ b/index.html
@@ -270,11 +270,10 @@
         <div class="row">
 
         <!-- Kolom Kiri -->
-        <div class="col-md-4 mb-4 mb-md-0 text-start">
-            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
-            <p class="mb-0 fw-bold">AKADEMI JUARA</p>
-        </div>
-
+<div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+    <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
+    <p class="mb-0 fw-bold">AKADEMI JUARA</p>
+</div>
         <!-- Kolom Tengah -->
         <div class="col-md-4 mb-4 mb-md-0 text-center">
             <p class="mb-1 fst-italic">"One child, One teacher, One pen can change the world"</p>
