--- a/aboutprof.html
+++ b/aboutprof.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item mx-2">
-            <a class="nav-link " href="main">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item mx-2">
             <a class="nav-link active" href="aboutprof.html">About Us</a>
@@ -78,7 +78,7 @@
         <div class="offcanvas-body">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link text-white" href="#">Home</a>
+            <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="aboutprof.html">About Us</a>
@@ -131,7 +131,7 @@
     </p>
 
 <!-- Baris 1: CEO & Founder -->
-    <h4 class="fw-semibold mb-3 text-center">BOD</h4>
+    <h4 class="fw-semibold mb-3 text-center">BoD</h4>
     <div class="horizontal-scroll justify-center mb-5">
     <div class="team-card perkenalan" >
         <div class="badge-card">Founder & coo</div>
@@ -159,7 +159,7 @@
 
 
     <!-- Baris 2: Staff -->
-    <h4 class="fw-semibold mb-3 text-center">Staff</h4>
+    <h4 class="fw-semibold mb-3 text-center">CFD</h4>
     <div class="horizontal-scroll mb-5">
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
@@ -235,7 +235,7 @@
     </div>
 
     <!-- Baris 3: Mentor -->
-    <h4 class="fw-semibold mb-3 text-center">Mentor</h4>
+    <h4 class="fw-semibold mb-3 text-center">ETD</h4>
     <div class="horizontal-scroll mb-3">
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
@@ -300,9 +300,10 @@
         <div class="row">
 
         <!-- Kolom Kiri -->
-        <div class="col-md-4 mb-4 mb-md-0 text-start">
+        <div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
             <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
             <p class="mb-0 fw-bold">AKADEMI JUARA</p>
+        </div>ass="mb-0 fw-bold">AKADEMI JUARA</p>
         </div>
 
         <!-- Kolom Tengah -->
