--- a/com.html
+++ b/com.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item mx-2">
-            <a class="nav-link " href="main.html">Home</a>
+            <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item mx-2">
             <a class="nav-link" href="aboutprof.html">About Us</a>
@@ -79,7 +79,7 @@
         <div class="offcanvas-body">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link text-white" href="#">Home</a>
+            <a class="nav-link text-white" href="index.html">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="aboutprof.html">About Us</a>
@@ -210,10 +210,10 @@
         <div class="row">
 
         <!-- Kolom Kiri -->
-        <div class="col-md-4 mb-4 mb-md-0 text-start">
-            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
-            <p class="mb-0 fw-bold">AKADEMI JUARA</p>
-        </div>
+    <div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+        <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
+        <p class="mb-0 fw-bold">AKADEMI JUARA</p>
+    </div>
 
         <!-- Kolom Tengah -->
         <div class="col-md-4 mb-4 mb-md-0 text-center">
