--- a/aboutprof.html
+++ b/aboutprof.html
@@ -48,6 +48,9 @@
             <a class="nav-link active" href="aboutprof.html">About Us</a>
             </li>
             <li class="nav-item mx-2">
+            <a class="nav-link" href="classes.html">Classes</a>
+            </li>
+            <li class="nav-item mx-2">
             <a class="nav-link" href="com.html">Community</a>
             </li>
         </ul>
@@ -82,6 +85,9 @@
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="aboutprof.html">About Us</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-white" href="aboutprof.html">Classes</a>
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="com.html">Community</a>
@@ -131,7 +137,7 @@
     </p>
 
 <!-- Baris 1: CEO & Founder -->
-    <h4 class="fw-semibold mb-3 text-center">BoD</h4>
+    <h4 class="fw-semibold mb-3 text-center">The Board of Directors</h4>
     <div class="horizontal-scroll justify-center mb-5">
     <div class="team-card perkenalan" >
         <div class="badge-card">Founder & coo</div>
@@ -159,7 +165,7 @@
 
 
     <!-- Baris 2: Staff -->
-    <h4 class="fw-semibold mb-3 text-center">CFD</h4>
+    <h4 class="fw-semibold mb-3 text-center">The Education & Technology Department</h4>
     <div class="horizontal-scroll mb-5">
         <div class="team-card perkenalan">
             <div class="badge-card">Staff</div>
@@ -235,7 +241,7 @@
     </div>
 
     <!-- Baris 3: Mentor -->
-    <h4 class="fw-semibold mb-3 text-center">ETD</h4>
+    <h4 class="fw-semibold mb-3 text-center">The Creative, Foreign &  Youth Development</h4>
     <div class="horizontal-scroll mb-3">
         <div class="team-card perkenalan">
             <div class="badge-card">Mentor</div>
@@ -295,17 +301,15 @@
 
 
  <!-- footer -->
-  <footer class="footer text-white py-4" style="background-color: #045260;">
+<footer class="footer text-white py-4" style="background-color: #045260;">
     <div class="container">
         <div class="row">
 
         <!-- Kolom Kiri -->
-        <div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
-            <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
-            <p class="mb-0 fw-bold">AKADEMI JUARA</p>
-        </div>ass="mb-0 fw-bold">AKADEMI JUARA</p>
-        </div>
-
+<div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+    <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
+    <p class="mb-0 fw-bold">AKADEMI JUARA</p>
+</div>
         <!-- Kolom Tengah -->
         <div class="col-md-4 mb-4 mb-md-0 text-center">
             <p class="mb-1 fst-italic">"One child, One teacher, One pen can change the world"</p>
@@ -313,7 +317,7 @@
         </div>
 
         <!-- Kolom Kanan -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center medsos" >
             <p class="fw-bold">HUBUNGI KAMI</p>
 
             <div class="sosmed-item ig mb-2">
