--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <a class="nav-link" href="aboutprof.html">About Us</a>
             </li>
             <li class="nav-item mx-2">
+            <a class="nav-link" href="classes.html">Classes</a>
+            </li>
+            <li class="nav-item mx-2">
             <a class="nav-link" href="com.html">Community</a>
             </li>
         </ul>
@@ -81,6 +84,9 @@
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="aboutprof.html">About Us</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link text-white" href="aboutprof.html">Classes</a>
             </li>
             <li class="nav-item">
             <a class="nav-link text-white" href="com.html">Community</a>
@@ -184,9 +190,7 @@
 <!-- program section -->
 <section class="py-5 bg-light text-center">
     <div class="container">
-        
-         <div class="row justify-content-center g-4">
-
+        <div class="row justify-content-center g-4">
         <div class="col-md-3 program-aj   ">
             <div class="stat-card" style="background-image: url('assets/1.png');">
             <div class="stat-overlay"></div>
@@ -281,7 +285,7 @@
         </div>
 
         <!-- Kolom Kanan -->
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center medsos" >
             <p class="fw-bold">HUBUNGI KAMI</p>
 
             <div class="sosmed-item ig mb-2">
