--- a/com.html
+++ b/com.html
@@ -210,60 +210,65 @@
 
 
 
- <!-- footer -->
-<footer class="footer text-white py-4" style="background-color: #045260;">
-    <div class="container">
-        <div class="row">
+    <!-- footer -->
 
-        <!-- Kolom Kiri -->
-    <div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+    <footer class="footer text-white py-4" style="background-color: #045260;">
+        <div class="container">
+            <div class="row">
+
+            <!-- Kolom Kiri -->
+    <div class="col-md-3 mb-4 mb-md-0 text-center text-md-start">
         <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
         <p class="mb-0 fw-bold">AKADEMI JUARA</p>
     </div>
-
-        <!-- Kolom Tengah -->
-        <div class="col-md-4 mb-4 mb-md-0 text-center">
-            <p class="mb-1 fst-italic">"One child, One teacher, One pen can change the world"</p>
-            <p class="fst-italic">- Malala Yousafzai</p>
-        </div>
-
-        <!-- Kolom Kanan -->
-        <div class="col-md-4 text-center">
-            <p class="fw-bold">HUBUNGI KAMI</p>
-
-            <div class="sosmed-item ig mb-2">
-            <a href="https://www.instagram.com/akademi.juara/" target="_blank"
-                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="assets/ig.png" alt="Instagram" width="20">
-                <span>@akademi.juara</span>
-            </a>
-            </div>
-
-            <div class="sosmed-item mb-2">
-            <a href="https://www.youtube.com/@AkademiJuara" target="_blank"
-                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="assets/yt.png" alt="YouTube" width="20">
-                <span>Akademi Juara</span>
-            </a>
-            </div>
-
-            <div class="sosmed-item">
-            <a href="https://www.linkedin.com/company/akademijuara/?originalSubdomain=id" target="_blank"
-                class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
-                <img src="assets/in.png" alt="LinkedIn" width="20">
-                <span>Akademi Juara</span>
-            </a>
-            </div>
-        </div>
-
-        </div>
-
-        <!-- Bawah Footer -->
-        <div class="text-center pt-3 mt-4 border-top border-light">
-        <p class="mb-0 small">&copy; 2025 Akademi Juara. All Rights Reserved.</p>
-        </div>
+    <!-- Kolom Tengah -->
+    <div class="col-md-6 mb-4 mb-md-0 text-center d-flex flex-column justify-content-center align-items-center px-2">
+        <p class="quote-line mb-1 fst-italic text-center">
+            "One child, One teacher, One pen can change the world"
+        </p>
+        <p class="quote-author fst-italic mb-0 text-center">
+            – Malala Yousafzai
+        </p>
     </div>
-</footer>
+
+
+            <!-- Kolom Kanan -->
+            <div class="col-md-3 text-center medsos" >
+                <p class="fw-bold">HUBUNGI KAMI</p>
+
+                <div class="sosmed-item ig mb-2">
+                <a href="https://www.instagram.com/akademi.juara/" target="_blank"
+                    class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                    <img src="assets/ig.png" alt="Instagram" width="20">
+                    <span>@akademi.juara</span>
+                </a>
+                </div>
+
+                <div class="sosmed-item mb-2">
+                <a href="https://www.youtube.com/@AkademiJuara" target="_blank"
+                    class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                    <img src="assets/yt.png" alt="YouTube" width="20">
+                    <span>Akademi Juara</span>
+                </a>
+                </div>
+
+                <div class="sosmed-item">
+                <a href="https://www.linkedin.com/company/akademijuara/?originalSubdomain=id" target="_blank"
+                    class="d-flex align-items-center justify-content-center text-decoration-none text-light gap-2">
+                    <img src="assets/in.png" alt="LinkedIn" width="20">
+                    <span>Akademi Juara</span>
+                </a>
+                </div>
+            </div>
+
+            </div>
+
+            <!-- Bawah Footer -->
+            <div class="text-center pt-3 mt-4 border-top border-light">
+            <p class="mb-0 small">&copy; 2025 Akademi Juara. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 
 <script src="js/rspn.js"></script>
 
