--- a/index.html
+++ b/index.html
@@ -274,18 +274,23 @@
         <div class="row">
 
         <!-- Kolom Kiri -->
-<div class="col-md-4 mb-4 mb-md-0 text-center text-md-start">
+<div class="col-md-3 mb-4 mb-md-0 text-center text-md-start">
     <img src="assets/2.png" alt="Logo" width="50" class="mb-2">
     <p class="mb-0 fw-bold">AKADEMI JUARA</p>
 </div>
-        <!-- Kolom Tengah -->
-        <div class="col-md-4 mb-4 mb-md-0 text-center">
-            <p class="mb-1 fst-italic">"One child, One teacher, One pen can change the world"</p>
-            <p class="fst-italic">- Malala Yousafzai</p>
-        </div>
+    <!-- Kolom Tengah -->
+    <div class="col-md-6 mb-4 mb-md-0 text-center d-flex flex-column justify-content-center align-items-center px-2">
+        <p class="quote-line mb-1 fst-italic text-center">
+            "One child, One teacher, One pen can change the world"
+        </p>
+        <p class="quote-author fst-italic mb-0 text-center">
+            – Malala Yousafzai
+        </p>
+    </div>
+
 
         <!-- Kolom Kanan -->
-        <div class="col-md-4 text-center medsos" >
+        <div class="col-md-3 text-center medsos" >
             <p class="fw-bold">HUBUNGI KAMI</p>
 
             <div class="sosmed-item ig mb-2">
@@ -321,7 +326,6 @@
         </div>
     </div>
 </footer>
-
 
 <script src="js/rspn.js"></script>
 
